// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in blockchain mode renders correctly block is invalid (index: 2) 1`] = `
<DocumentFragment>
  .c1 {
  color: hsl(0,80%,65%);
}

.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<form
    aria-label="Block Statistics"
    class="c0 mt-3"
  >
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Nonce
        </span>
      </div>
      <input
        aria-label="Block Nonce"
        class="form-control"
        disabled=""
        name="nonce"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Header
        </span>
      </div>
      <input
        aria-label="Block Header"
        class="form-control"
        disabled=""
        name="header"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Target
        </span>
      </div>
      <input
        aria-label="Block Target"
        class="text-truncate form-control"
        name="target"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Sol'n
        </span>
      </div>
      <input
        aria-label="Block Solution Invalid"
        class="c1 text-truncate form-control"
        name="solution"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Block Mine"
      class="btn-block p-1 btn btn-primary"
      type="button"
    >
      <h4
        class="my-0 row justify-content-end align-items-center flex-nowrap"
      >
        <span
          class="col-10 pl-5"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.972 2.508a.5.5 0 0 0-.16-.556l-.178-.129a5.009 5.009 0 0 0-2.076-.783C6.215.862 4.504 1.229 2.84 3.133H1.786a.5.5 0 0 0-.354.147L.146 4.567a.5.5 0 0 0 0 .706l2.571 2.579a.5.5 0 0 0 .708 0l1.286-1.29a.5.5 0 0 0 .146-.353V5.57l8.387 8.873A.5.5 0 0 0 14 14.5l1.5-1.5a.5.5 0 0 0 .017-.689l-9.129-8.63c.747-.456 1.772-.839 3.112-.839a.5.5 0 0 0 .472-.334z"
            />
          </svg>
        </span>
        <div
          class="mr-3 invisible spinner-border"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </h4>
    </button>
  </form>
</DocumentFragment>
`;

exports[`in blockchain mode renders correctly block is valid (index: 0) 1`] = `
<DocumentFragment>
  .c1 {
  color: hsl(120,80%,65%);
}

.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<form
    aria-label="Block Statistics"
    class="c0 mt-3"
  >
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Nonce
        </span>
      </div>
      <input
        aria-label="Block Nonce"
        class="form-control"
        disabled=""
        name="nonce"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Header
        </span>
      </div>
      <input
        aria-label="Block Header"
        class="form-control"
        disabled=""
        name="header"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Target
        </span>
      </div>
      <input
        aria-label="Block Target"
        class="text-truncate form-control"
        name="target"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Sol'n
        </span>
      </div>
      <input
        aria-label="Block Solution"
        class="c1 text-truncate form-control"
        name="solution"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Block Mine"
      class="btn-block p-1 btn btn-primary"
      disabled=""
      type="button"
    >
      <h4
        class="my-0 row justify-content-end align-items-center flex-nowrap"
      >
        <span
          class="col-10 pl-5"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.972 2.508a.5.5 0 0 0-.16-.556l-.178-.129a5.009 5.009 0 0 0-2.076-.783C6.215.862 4.504 1.229 2.84 3.133H1.786a.5.5 0 0 0-.354.147L.146 4.567a.5.5 0 0 0 0 .706l2.571 2.579a.5.5 0 0 0 .708 0l1.286-1.29a.5.5 0 0 0 .146-.353V5.57l8.387 8.873A.5.5 0 0 0 14 14.5l1.5-1.5a.5.5 0 0 0 .017-.689l-9.129-8.63c.747-.456 1.772-.839 3.112-.839a.5.5 0 0 0 .472-.334z"
            />
          </svg>
        </span>
        <div
          class="mr-3 invisible spinner-border"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </h4>
    </button>
  </form>
</DocumentFragment>
`;

exports[`in preview mode renders correctly 1`] = `
<DocumentFragment>
  .c1 {
  color: hsl(0,80%,65%);
}

.c0 {
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

<form
    aria-label="Block Statistics"
    class="c0 col-12 col-lg-5 mx-3 mb-2 mb-lg-0 bg-dark px-2 pb-2 rounded"
  >
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Nonce
        </span>
      </div>
      <input
        aria-label="Block Nonce"
        class="form-control"
        disabled=""
        name="nonce"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Header
        </span>
      </div>
      <input
        aria-label="Block Header"
        class="form-control"
        disabled=""
        name="header"
        type="number"
        value="0"
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Target
        </span>
      </div>
      <input
        aria-label="Block Target"
        class="text-truncate form-control"
        name="target"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <div
      class="my-2 input-group"
    >
      <div
        class="input-group-prepend"
      >
        <span
          class="input-group-text"
        >
          Sol'n
        </span>
      </div>
      <input
        aria-label="Block Solution Invalid"
        class="c1 text-truncate form-control"
        name="solution"
        readonly=""
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Block Mine"
      class="btn-block p-1 btn btn-primary"
      type="button"
    >
      <h4
        class="my-0 row justify-content-end align-items-center flex-nowrap"
      >
        <span
          class="col-10 pl-5"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M9.972 2.508a.5.5 0 0 0-.16-.556l-.178-.129a5.009 5.009 0 0 0-2.076-.783C6.215.862 4.504 1.229 2.84 3.133H1.786a.5.5 0 0 0-.354.147L.146 4.567a.5.5 0 0 0 0 .706l2.571 2.579a.5.5 0 0 0 .708 0l1.286-1.29a.5.5 0 0 0 .146-.353V5.57l8.387 8.873A.5.5 0 0 0 14 14.5l1.5-1.5a.5.5 0 0 0 .017-.689l-9.129-8.63c.747-.456 1.772-.839 3.112-.839a.5.5 0 0 0 .472-.334z"
            />
          </svg>
        </span>
        <div
          class="mr-3 invisible spinner-border"
          role="status"
        >
          <span
            class="sr-only"
          >
            Loading...
          </span>
        </div>
      </h4>
    </button>
  </form>
</DocumentFragment>
`;
